Lower: Logic changes on AppUserServiceImpl and AppUserServiceImplTest.